[package]
name = "paperazzi"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive", "color", "suggestions"] }
url = { version = "2.2.2", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.23"
webbrowser = "0.8"
select = "0.5"